@@ -2,6 +2,10 @@ PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? 1999, Version 4.0 Beta 3
+- Fixed several problems with output buffering and HEAD requests (Zeev)
+- Fixed HTTP Status code issue with ISAPI module (Zeev)
+- Fixed a problem that prevented $GLOBALS from working properly (Zeev, Zend
+  library)
 - Fixed the a problem in the resource reference counting mechanism, that
   caused resources to be freed much later than they were supposed to (Zeev,
   Zend library)
